src/test/deca/syntax/valid/while_simple.deca

// Description :
// Couverture syntaxe : while
//
// Resultats :
// ok
//

{
    while (x) {
        x = x + 1 ;
    }
}