src/test/deca/syntax/invalid/bool_int.deca
// Description :
// double decalration

// Resultats :
// Erreur contextuelle


{
    boolean int x;
}